# tools.admin

./: .dockerignore  .editorconfig  .gitignore  .golangci.yaml  .goreleaser.yml  .stickler.yaml  CHANGELOG.md  Dockerfile  Makefile  Makefile.local  README.md  action.yml  entrypoint.sh  go.mod  go.sum  mypy.ini  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  cleanup-runs.yml  dockerfiles.yml  go.yml  release.yml  shell.yml
.specify/memory/: constitution.md
cmd/radm/: main.go  main_test.go
cmd/tools.admin/: main.go
deploy/: action.yml
deploy-cf-pages/: action.yml
deploy-cf-pages/scripts/: build-hugo-worker.sh  build-hugo.sh  build-worker.sh  detect-pattern.sh  push-to-cf-pages.sh
deploy-gh-pages/: action.yml
deploy-gh-pages/scripts/: build.sh  push-to-gh-pages.sh
deploy/scripts/: build-hugo-worker.sh  detect-pattern.sh
examples/: cleanup-runs-weekly.yml  go-quality.yml
examples/go-repo/: Makefile  ci.mk  go-quality.yml
go-tooling/: .dockerignore  .golangci.yml  Dockerfile  Makefile  README.md  action.yml  entrypoint.sh  go.mod  go.sum  revive.toml  tools.mk
internal/adminerr/: adminerr.go  adminerr_test.go
internal/app/: action.go  app_test.go  handler.go  logger.go  output.go
make/: pattern-hugo-worker.mk  pattern-hugo.mk  pattern-template.mk  pattern-worker.mk  repository.mk  standard.mk
refresh-infra/: action.yml
tests/: conftest.py  test_cleanup_runs.py  test_cli.py  test_create_pr.py  test_diff.py  test_git.py  test_github_api.py  test_models.py  test_schema_validation.py  test_settings_io.py  test_snapshot.py
(+68 files in other folders)
